syntax = "proto3";
import "google/protobuf/timestamp.proto";

package user;

service UserService {
  rpc getListUser (GetListUserRequest) returns (GetListUserResponse);
  rpc createUser (CreateUserRequest) returns (CreateUserResponse);
}

// GET LIST USER
message GetListUserRequest {
  string keyword = 1;
}
message GetListUserResponse {
  repeated User listUser = 1;
}

// CREATE USER
message CreateUserRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
  string confirm_password = 4;
}
message CreateUserResponse {
  User user = 1;
}

message User {
  string full_name = 1;
  string email = 2;
  optional string avatar = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  optional string user_id = 6;
  optional string password = 7;
  bool is_active = 8;
}