syntax = "proto3";

package user;

service UserService {
  rpc getUser (UserRequest) returns (UserResponse);
}

message User {
  string name = 1;
  string email = 2;
  string avatar = 3;
  string userCreatedDt = 4;
  string id = 5;
}

message UserRequest {
  string keyword = 1;
}

message UserResponse {
  repeated User user = 1;
}
